# multi-agent-research-pipeline

./: README.md  app.py  main.py  pyproject.toml  tempCodeRunnerFile.py
agents/: report_writer.py  search_agent.py  summarizer_agent.py
graph/: pipeline.py
outputs/: ai_based_fitness_exercise_form_detector.md  future_of_quantum_computing.md
tools/: tavily_search.py
