[project]
name = "research-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.2",
    "pylance>=7.0.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tavily>=1.1.0",
    "tavily-python>=0.7.24",
]
